--- a/front-end/src/style/style.css
+++ b/front-end/src/style/style.css
@@ -1,1 +1,76 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+:root {
+  --color-primary: #fee0c7;
+  --color-secundary: #A786DF;
+  --color-font-primary: #FC462D;
+  --font-family: "Nunito";
+  --color-yellow: #c4d791;
+  --color-green: #85d185;
+  --color-gray: #535353;
+  --color-tertiary: #D9D4E7;
+  --color-black: #0E172C;
+  --bs-secondary: #0E172C;
+}
+
+.body1Regular {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.005em;
+  color: var(--color-gray);
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: none;
+  list-style: none;
+  text-decoration: none;
+  outline: none;
+}
+
+body {
+  width: 100%;
+}
+
+.header {
+  height: 88px;
+  background-color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#navbar ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#logo h1 {
+  font-family: 'Inter', sans-serif;
+  font-style: italic;
+  font-size: 22pt;
+  color: var(--color-font-primary);
+}
+
+#navbar ul li {
+  color: white;
+  margin: 10px;
+}
+
+.grid-elementos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: scroll;
+}
+/*# sourceMappingURL=style.css.map */
