--- a/front-end/src/style/partials/_body.scss
+++ b/front-end/src/style/partials/_body.scss
@@ -1,4 +1,14 @@
-body {
+.body {
     width: 100%;
     //height: 1626px;
+    background-color: #FF906D;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-bg {
+    width: 90%;
+
+    background-color: white;
 }
