--- a/front-end/src/style/partials/_header.scss
+++ b/front-end/src/style/partials/_header.scss
@@ -1,13 +1,14 @@
 .header {
-    //width: 100%;
+    width: 100%;
     height: 88px;
     background-color: black;
     display:  flex;
     justify-content: space-between;
     align-items: center;
+    overflow: scroll;
 }
 
-#navbar ul {
+#navbar ul , #navbar1 ul {
     display: flex;
     
 
@@ -21,7 +22,7 @@
     color: var(--color-font-primary);
 }
 
-#navbar ul li {
+#navbar ul li, #navbar1 ul li {
     color: white;
     margin: 10px;
 }
