--- a/front-end/src/style/style.css
+++ b/front-end/src/style/style.css
@@ -31,11 +31,27 @@
   outline: none;
 }
 
-body {
+.body {
   width: 100%;
+  background-color: #FF906D;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main-bg {
+  width: 90%;
+  background-color: white;
 }
 
 .header {
+  width: 100%;
   height: 88px;
   background-color: black;
   display: -webkit-box;
@@ -47,9 +63,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow: scroll;
 }
 
-#navbar ul {
+#navbar ul, #navbar1 ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -62,7 +79,7 @@ body {
   color: var(--color-font-primary);
 }
 
-#navbar ul li {
+#navbar ul li, #navbar1 ul li {
   color: white;
   margin: 10px;
 }
@@ -72,5 +89,44 @@ body {
   display: -ms-flexbox;
   display: flex;
   overflow: scroll;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 10% 50% 40%;
+      grid-template-columns: 10% 50% 40%;
+  -ms-grid-rows: 100%;
+      grid-template-rows: 100%;
+}
+
+.detailsAside {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 1 / 2 / 2;
+  width: 100%;
+  height: 100%;
+}
+
+.detailsImg {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+.detailsAside .detailsNav li img {
+  width: 30px;
+  height: 30px;
+}
+
+.detailsImg img {
+  width: 30px;
+  height: 30px;
 }
 /*# sourceMappingURL=style.css.map */
