--- a/front-end/src/style/style.scss
+++ b/front-end/src/style/style.scss
@@ -1,4 +1,5 @@
 @import "./partials/variables";
+@import "./partials/variablescopy";
 @import "./partials/fonts";
 @import "./partials/baserules";
 @import "./partials/body";
@@ -6,3 +7,8 @@
 @import "./partials/navbar";
 @import "./partials/main";
 @import "./partials/details";
+@import "./partials/cart";
+@import "./partials/footer";
+@import "./partials/main-section";
+@import "./partials/nav";
+@import "./partials/side-menu";
