--- a/front-end/src/style/partials/_header.scss
+++ b/front-end/src/style/partials/_header.scss
@@ -1,7 +1,7 @@
 .header {
     width: 100%;
     height: 88px;
-    background-color: black;
+    background-color: white;
     display:  flex;
     justify-content: space-between;
     align-items: center;
@@ -23,6 +23,6 @@
 }
 
 #navbar ul li, #navbar1 ul li {
-    color: white;
+    color: black;
     margin: 10px;
 }
