--- a/front-end/src/style/style.css
+++ b/front-end/src/style/style.css
@@ -94,12 +94,6 @@
 main {
   width: 100%;
   height: 100%;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 10% 50% 40%;
-      grid-template-columns: 10% 50% 40%;
-  -ms-grid-rows: 100%;
-      grid-template-rows: 100%;
 }
 
 .detailsAside {
@@ -143,6 +137,7 @@ main {
   right: 30px;
   max-height: 70vh;
   overflow-y: auto;
+  z-index: 30;
 }
 
 #cart-box .item {
@@ -254,233 +249,5 @@ main {
   border-radius: 100%;
   height: 20px;
   width: 20px;
-}
-
-footer {
-  border-top: solid black 1px;
-}
-
-footer h2 {
-  font-family: "Montserrat", sans-serif;
-  font-weight: bold;
-  font-size: 15px;
-  text-align: center;
-}
-
-footer .foot_nav {
-  padding-bottom: 16.6px;
-}
-
-footer .foot_nav .info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  font-family: "Montserrat", sans-serif;
-  font-size: 10px;
-}
-
-footer .foot_nav .info .us ul {
-  margin: 0;
-  padding: 0;
-}
-
-footer .foot_nav .info .money ul {
-  margin: 0;
-  padding: 0;
-}
-
-footer .foot_nav .info .soporte ul {
-  margin: 0;
-  padding: 0;
-}
-
-footer .foot_last {
-  border-top: solid black 1px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-footer .foot_last p {
-  font-family: "Montserrat", sans-serif;
-  font-size: 10px;
-}
-
-footer .foot_last .link_icon {
-  cursor: pointer;
-  color: black;
-}
-
-footer .foot_last .link_icon:hover {
-  -webkit-transform: scale(2);
-          transform: scale(2);
-  color: grey;
-}
-
-footer .foot_last .icons {
-  width: 80px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-main h2 {
-  font-size: 3rem;
-  font-weight: 900;
-  margin: 50px 0 25px;
-}
-
-#catalog {
-  text-align: center;
-}
-
-.grid {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  line-height: 35px;
-}
-
-.grid .card {
-  text-align: center;
-  margin: 25px 8%;
-  border-radius: 25px;
-  -webkit-box-shadow: 0px 4px 18px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 4px 18px 1px rgba(0, 0, 0, 0.2);
-}
-
-.grid img {
-  margin-top: 25px;
-}
-
-header {
-  width: 100%;
-  height: 95px;
-  position: -webkit-sticky;
-  position: sticky;
-  border-bottom: solid thin #a5a5a5;
-  -webkit-box-shadow: 2px 3px 10px #888888;
-          box-shadow: 2px 3px 10px #888888;
-}
-
-.top-nav {
-  padding: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.top-nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.top-nav li {
-  list-style: none;
-}
-
-.top-nav .item-self {
-  margin-right: auto;
-  padding: 0;
-}
-
-.top-nav .item-self img {
-  margin: 0 0 0 50px;
-  width: 370px;
-  height: 65px;
-}
-
-.top-nav a {
-  text-decoration: none;
-  color: black;
-}
-
-.top-nav a img {
-  width: 65px;
-  height: 60px;
-}
-
-.top-nav .lista-nav {
-  margin-right: 150px;
-}
-
-.top-nav .search-bar {
-  width: 350px;
-  height: 50px;
-  background: #fff;
-  border: 1px solid #000;
-  border-radius: 27px;
-  margin-right: 80px;
-}
-
-.top-nav .searchbar-input {
-  text-align: center;
-  width: 87%;
-  height: 47px;
-  border: none;
-  margin-left: 6%;
-  font-size: 16px;
-}
-
-#side-menu {
-  background-color: #fafafa;
-  padding: 20px;
-}
-
-#side-menu h3 {
-  text-align: center;
-  font-size: 1.7rem;
-  font-weight: 800;
-  margin-top: 35px;
-}
-
-#side-menu p {
-  margin: 15px 0;
-}
-
-main {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 20% 80%;
-      grid-template-columns: 20% 80%;
 }
 /*# sourceMappingURL=style.css.map */
